--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang=""en-US>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="initial-scale=1", width="device-width" />
-        <Title>Electron Template</Title>
-    </head>
-    <body>
-        <div id="react-target"></div>
-    </body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>LAN Chat</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
